# stock_analyst

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: run_hancom_pipeline.sh  run_stock_pipeline.sh
stock_analyst/: analyst.py  backlog_probe.py  cli.py  dart.py  materials.py  models.py  report.py  standalone.py
templates/: revenue_breakdown_template.csv
tests/: test_financials.py
